@@ -1,6 +1,7 @@
 July 17, 2008 (ntrel)
   Fix use of old app macro.
   Fix segfault in last commit in glspi_init() (oops).
+  Don't install .svn subdirectories in examples.
 
 July 15, 2008 (ntrel)
   Fix for GeanyEditor changes.
